[package]
name = "netup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = "4.5.4"
serde = { version = "1.0.198", features = ["derive"] }
sha2 = "0.10.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
